--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head><title>My DevOps Site</title></head>
+<head>
+  <title>My DevOps Site</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      text-align: center;
+      margin: 0;
+      padding: 0;
+      background-color: #f2f2f2;
+    }
+    img {
+      max-width: 90%;
+      height: auto;
+      margin-top: 50px;
+    }
+  </style>
+</head>
 <body>
-  <h1>Hello from DevOps CI/CD!</h1>
+  <img src="devops-banner.jpg" alt="DevOps Banner">
 </body>
 </html>
