--- a/index.html
+++ b/index.html
@@ -2,22 +2,33 @@
 <html>
 <head>
   <title>My DevOps Site</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       text-align: center;
-      margin: 0;
-      padding: 0;
+      font-family: Arial, sans-serif;
       background-color: #f2f2f2;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 {
+      color: #333;
     }
     img {
-      max-width: 90%;
+      max-width: 100%;
       height: auto;
-      margin-top: 50px;
+      border-radius: 10px;
+    }
+    .wedding-text {
+      font-size: 24px;
+      font-weight: bold;
+      color: #d6336c;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
+  <h1>Hello from DevOps CI/CD!</h1>
   <img src="devops-banner.jpg" alt="DevOps Banner">
+  <div class="wedding-text">Sathish weds Ramya</div>
 </body>
 </html>
