--- a/index.html
+++ b/index.html
@@ -5,29 +5,15 @@
   <style>
     body {
       text-align: center;
-      font-family: Arial, sans-serif;
-      background-color: #f2f2f2;
-      margin: 0;
-      padding: 20px;
-    }
-    h1 {
-      color: #333;
     }
     img {
       max-width: 100%;
       height: auto;
-      border-radius: 10px;
-    }
-    .wedding-text {
-      font-size: 24px;
-      font-weight: bold;
-      color: #d6336c;
-      margin-top: 20px;
     }
   </style>
 </head>
 <body>
+  <h1>Hello from DevOps CI/CD!</h1>
   <img src="devops-banner.jpg" alt="DevOps Banner">
-  <div class="wedding-text">Sathish weds Ramya</div>
 </body>
 </html>
